openshift/service-grafana-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grafana
    port: 3000
    protocol: TCP
    targetPort: grafana-http
  selector:
    app: grafana-dev
  sessionAffinity: None
  type: ClusterIP
