openshift/route-grafana-dev.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-dev
spec:
  path: /
  port:
    targetPort: grafana
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: grafana-dev
    weight: 100
  wildcardPolicy: None
